--- a/D2.3/Obu_descr.tex
+++ b/D2.3/Obu_descr.tex
@@ -8,12 +8,13 @@ computer implements the functions of the SRS subset 026 of UNISIG (for SRS versi
 with baseline 3, published by ERA) in order to guarantee the safety of the train movements.
 The OpenETCS scope of application is related only to the EVC part of whole ERTMS system.
 The track-side part of the ETCS (the Radio Based Control) is excluded from the project activities, it is
-only considered through its interfaces with the On-Board part of ETCS.
+only considered through its interfaces with the on-board part of ETCS.
 
 A detailed specification of the sub-system will be given during the system analysis phase: the Sub-System Requirement Specification shall contain 
 \begin{itemize}
 \item the high level description of the openETCS case study
-\item the environment and the architecture of the sub-system  to design, with interfaces main functions and data-flow
+\item the environment and the architecture of the sub-system  to design, with
+  interfaces of the main functions and data-flows
 \end{itemize}
 
 Safety properties shall be given in the sub-system hazard analysis.
