--- a/D2.3/intro.tex
+++ b/D2.3/intro.tex
@@ -32,16 +32,16 @@ The final goal is that industrial actors work with this model instead of the
 natural language specification.
 The objective is to cover as much as possible of the  functionality of the on-board unit described in SUBSET-026 and to show the capabilities of analyses of a complex system using formal approaches.
 
-\paragraph{Define the safety case concept for the full model and apply it on a subset of the on-board unit}
+\paragraph{Definition the safety case concept for the full model and apply it on a subset of the on-board unit}
 The safety strategy and the safety case concept required for the full validation of the product, compliant to the CENELEC standards shall be taken into account in all steps of the specification and design process. This will allow industrial actors to reuse the models and processes to develop certifiable products.
 
 In particular the definition of the process shall take into account specification as well as verification and validation of the safety properties on the models. The outputs of WP4 (safety plan, safety case concept, verification plan and validation plan) will complete the description of the safety process.
 
 
-\paragraph{Provide a tool chain and process/methodologies for developing
+\paragraph{Providing a tool chain and process/methodologies for developing
 an on-board software that can fulfil the CENELEC requirements for SIL4 software}
 
-The design process of the system and the associated tools of the tool chain, shall be suitable to provide a certifiable product. For this purpose all steps of the process and the choice of the methods and tools shall be justified to ensure a safe approach to build an ETCS system.
+The design process of the system and the associated tools of the tool chain shall be suitable to provide a certifiable product. For this purpose all steps of the process and the choice of the methods and tools shall be justified to ensure a safe approach to build an ETCS system.
 
 The full safety process required to make OpenETCS \emph{certifiable} according to CENELEC 50126, 50128 and 50129 shall be described in detail. The safety process will detail precisely which activities are required, why they are required, and the choices that are made to claim that a safe design process is guaranteed.
 
@@ -53,12 +53,7 @@ The tool chain should include model editors, code generators, verification tools
 
 An executable software of the specification shall be provided, as well as a non vital implementation of the on-board unit for laboratory test, simulation and as reference.
 
-The output is the result of a functional implementation for the ETCS requirements and architecture which can be used by the industrial as reference.
-
-\todo{ Does this executable take into account real-time constraints ? API ? from which model it is derived ? }
-\todo{at which level of the V-cycle ? system  ? software ?}
-
-Besides this executable software, the tool chain can be used to  generate certifiable executable software from the formal model of sub-parts of the on-board unit.
+The output is the result of a functional implementation for the ETCS requirements and architecture which can be used by the industrial as reference. It will be a non-vital  implementation, able to be executed in real-time and in interaction with other components.
 
 
 \subsection{Contents of this Document}
@@ -112,18 +107,6 @@ of ETCS in Levels 1 \& 2}
 \item D2.2 -- Report on CENELEC standards
 \item D2.6 -- Requirements for OpenETCS
 \end{itemize}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\section{Conventions}
-The requirements are prefixed by “R-zz-x-y”, and are written in a roman typeface, where ``R''
-stands for ``Requirement'', ``zz'' identifies the source document,``x''
-is the version number and``y'' is the identifier of the requirement. All the text
-written in italics is not a requirement: it may be a note, an open issue, an
-explanation of the requirements, or an example.
-
-The placeholder “\todo{xxx}” is used to indicate an unfinished  paragraph or section which is
-to be defined or confirmed.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
