Integrate formal review into D2.4 document -> version 00.02
Signed-off-by: David MENTRE <d.mentre@fr.merce.mee.com>

--- a/D2.4/D2_4.tex
+++ b/D2.4/D2_4.tex
@@ -12,7 +12,7 @@
 % The document metadata is defined below
 
 %assign a report number here
-\reportnum{OETCS/WP2/D2.4~--~00.01}
+\reportnum{OETCS/WP2/D2.4~--~00.02}
 
 %define your workpackage here
 \wp{Work-Package 2: ``Definition''}
@@ -69,7 +69,7 @@ Work Package &  WP2  \\
 Deliverable ID or doc. ref. & D2.4\\
 \hline
 Document title & Definition of the methods used to perform the formal description \\
-Document version & 00.01 \\
+Document version & 00.02 \\
 Document authors (org.)  & Marielle Petit-Doche (Systerel)  \\
   & David Mentré (Mitsubishi Electric R\&D Centre Europe)  \\
   & Mathias Güdemann (Systerel)  \\
@@ -82,7 +82,7 @@ Document authors (org.)  & Marielle Petit-Doche (Systerel)  \\
 \hline
 Last version reviewed & 00.01 \\
 \hline
-Main reviewers &  \\
+Main reviewers & Sylvain Baro, Bernd Hekele \\
 \hline
 \end{tabular}
 
@@ -107,6 +107,9 @@ Approved by & Gilles Dalmas & WP2 leader & \\
 Version &  Date & Author(s) & Justification  \\
 \hline  
 00.01 & 03/05/2013 & M. Petit-Doche &  Incorporation of section on formal methods written by David Mentré \\
+\hline  
+00.02 & 2013-05-16 & D. Mentré &  Incorporation of formal reviews in
+the document \\
 \hline  
 
 \end{tabular}
