--- a/D2.4/formal_design.tex
+++ b/D2.4/formal_design.tex
@@ -4,7 +4,7 @@
 Very roughly, from an engineering point of view three kinds of formal
 methods can be used for the design and development of a system:
 \begin{itemize}
-\item Pre/Post-condition approach;
+\item Contract based approaches;
 \item Model checking of concurrent and synchronous languages;
 \item Static analysis of software code.
 \end{itemize}
